<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flyst</string>
    <string name="adb_wifi_button_text">ADB WiFi</string>
    <string name="main_settings_button_text">System Settings</string>
    <string name="menu_settings_text">Settings</string>
    <string name="label_sunset">Sunset:</string>
    <string name="label_from_now">from now</string>
    <string name="hour_indicator">h</string>
    <string name="minute_indicator">m</string>
    <string name="label_see_upcoming_tasks">See upcoming tasks</string>

    <string name="activity_name_dashboard">Dashboard</string>
    <string name="activity_name_pilots">Pilots</string>
    <string name="activity_name_gliders">Gliders</string>
    <string name="activity_name_winch">Winch</string>
    <string name="activity_name_retrieves">Retrieve(s)</string>
    <string name="activity_name_settings">Settings</string>

    <string name="add_pilot_button_text">Add Pliot</string>
    <string name="add_pilot_dialog_title">Add Pliot To Flying List</string>
    <string name="add_member_dialog_title">Add Member</string>
    <string name="edit_member_dialog_title">Edit Member</string>
    <string name="add_glider_dialog_title">Add Glider</string>
    <string name="add_glider_to_list_dialog_title">Add Glider To Flying List</string>
    <string name="edit_glider_dialog_title">Edit Glider</string>
    <string name="add_pilot_search_box_hint">Search For Pilot</string>

    <string name="label_dashboard_pilots_flown">Pilots on Flying List flown:</string>
    <string name="label_dashboard_no_pilots_on_list">No pilots currently on list</string>
    <string name="add_member_button_text">Add Member</string>
    <string name="save_member_button_text">Save Member</string>
    <string name="save_glider_button_text">Save Glider</string>
    <string name="label_time_added_to_list">Time added to list:</string>
    <string name="label_remove_pilot_from_list">Remove Pilot From List</string>
    <string name="label_already_on_flying_list">Already on Flying List</string>

    <string name="label_member_first_name">First Name</string>
    <string name="label_member_surname">Surname</string>
    <string name="label_member_is_winch_driver">Winch Driver?</string>
    <string name="label_member_is_retrieve_driver">Retrieve Driver?</string>
    <string name="label_member_instructor_category">Instructor Category</string>

    <string name="settings_button_general">General</string>
    <string name="settings_button_members">Members</string>
    <string name="settings_button_gliders">Gliders</string>
    <string name="settings_button_system">System</string>

    <string name="settings_section_general">General Settings</string>
    <string name="settings_section_members">Member Settings</string>
    <string name="settings_section_gliders">Glider Settings</string>
    <string name="settings_section_system">System Settings</string>

    <string name="delete_member">Delete Member</string>
    <string name="edit_member">Edit Member</string>

    <string name="password_box_hint">Password</string>
    <string name="password_submit_button">Access System Settings</string>
    <string name="change_password_button">Change Password</string>
    <string name="set_password_button">Set Password</string>
    <string name="change_password_hint_current_password">Current Password</string>
    <string name="change_password_hint_new_password">New Password</string>
    <string name="change_password_hint_repeat_new_password">Repeat New Password</string>
    <string name="clear_password_button">Clear Password</string>
    <string name="clear_password_hint_current_password">Current Password</string>
    <string name="clear_password_title">Clear Password</string>
    <string name="label_up">Up</string>
    <string name="add_glider_button_text">Add Glider</string>
    <string name="delete_glider">Delete Glider</string>
    <string name="edit_glider">Edit Glider</string>
    <string name="label_glider_is_two_seater">Two Seater?</string>
    <string name="label_member_is_club_glider">Club Glider?</string>
    <string name="label_glider_registration">Registration</string>
    <string name="label_glider_type">Type</string>

</resources>
