<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/main_title_text_size"
        android:textColor="@color/main_title"
        android:text="@string/settings_section_system"
        android:paddingBottom="@dimen/default_padding"/>

    <LinearLayout
        android:id="@+id/password"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">
        <EditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/password_box_hint"
            android:layout_marginBottom="@dimen/default_padding"/>

        <Button
            android:id="@+id/password_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_submit_button"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/system_settings"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
        <Button
            android:id="@+id/adbwifi_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adb_wifi_button_text"
            android:layout_marginBottom="@dimen/default_padding"/>

        <Button
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_settings_button_text"
            android:layout_marginBottom="@dimen/default_padding"/>

        <Button
            android:id="@+id/change_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password_button"
            android:layout_marginBottom="@dimen/default_padding"/>

        <Button
            android:id="@+id/clear_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_password_button"/>
    </LinearLayout>
</LinearLayout>
