<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="600dp"
    android:padding="@dimen/default_padding">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_padding">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/basic_text"
                android:textSize="@dimen/field_label"
                android:text="@string/label_member_first_name"/>

            <EditText
                android:id="@+id/edit_text_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textCapWords"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/basic_text"
                android:textSize="@dimen/field_label"
                android:text="@string/label_member_surname"/>

            <EditText
                android:id="@+id/edit_text_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textCapWords"/>
        </LinearLayout>
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkbox_is_winch_driver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_member_is_winch_driver"
        android:layout_marginBottom="@dimen/default_padding"
        android:paddingLeft="@dimen/default_padding_checkbox"/>

    <CheckBox
        android:id="@+id/checkbox_is_retrieve_driver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_member_is_retrieve_driver"
        android:layout_marginBottom="@dimen/default_padding"
        android:paddingLeft="@dimen/default_padding_checkbox"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/basic_text"
            android:textSize="@dimen/field_label"
            android:text="@string/label_member_instructor_category"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/spinner_instructor_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:prompt="@string/label_member_instructor_category"
            android:popupBackground="#000000"
            android:layout_weight="1"
            android:gravity="end"/>
    </LinearLayout>
</LinearLayout>
