<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="@dimen/clickable_bar_width"
    android:background="@color/clickable_bar_background">
    <ImageButton
        android:id="@+id/home"
        android:layout_alignParentLeft="true"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha"
        android:contentDescription="@string/label_up"
        android:background="@color/clickable_bar_background"
        android:paddingLeft="@dimen/default_padding_small"
        android:paddingRight="@dimen/default_padding"
        android:scaleType="centerCrop"
        android:paddingTop="@dimen/default_padding"
        android:paddingBottom="@dimen/default_padding"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/main_title"
        android:layout_toRightOf="@id/home"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/clickable_bar_text_size"
        android:textColor="@color/clickable_bar_text"
        android:gravity="left|center_vertical"/>

    <Button
        android:id="@+id/menu_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:text="@string/menu_settings_text"
        android:drawableLeft="@android:drawable/ic_menu_preferences"
        android:background="@android:color/transparent"
        android:paddingRight="@dimen/default_padding"
        android:textColor="@color/clickable_bar_text"/>
</RelativeLayout>
